<resources>
    <string name="app_name">Manager Personal</string>
    <string name="name">Name:</string>
    <string name="date">Date:</string>
    <string name="sex">Sex:</string>
    <string name="search_your_name">Search your name</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="delete">Delete</string>
    <string name="detail">Detail</string>
    <string name="add">Add</string>
</resources>