<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_item_setting"
    android:backgroundTint="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:spacing="8dp">

        <!-- Title and EditText for Name -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nhập tên"
            android:inputType="textPersonName" />

        <!-- Title and EditText for Date -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_marginTop="@dimen/_6sdp"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium" />

        <EditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ngày sinh (dd/MM/yyyy)"
            android:inputType="text" />

        <!-- Title and EditText for Gender -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:layout_marginTop="@dimen/_6sdp"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium" />

        <EditText
            android:id="@+id/etSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Giới tính(Nam/Nữ)"
            android:inputType="text" />

        <!-- Add Button -->
        <TextView
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_500"
            android:gravity="center"
            android:textSize="@dimen/_13ssp"
            android:paddingVertical="@dimen/_8sdp"
            android:background="@drawable/bg_item_setting"
            android:backgroundTint="@color/color_475CFF"
            android:layout_marginTop="@dimen/_13sdp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>