<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardElevation="4dp"
    card_view:cardCornerRadius="8dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="12dp">

            <TextView
                android:id="@+id/tvMaNv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="MaNv"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvChucVu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tvHsl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tvLcb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ivMore"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_6sdp"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_more"
            />
    </LinearLayout>
</androidx.cardview.widget.CardView>
