<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/_8sdp"
        android:background="@color/color_475CFF"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_back"
            android:padding="@dimen/_3sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            app:layout_constraintBottom_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvTitle" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_500"
            android:text="@string/detail"
            android:layout_gravity="bottom|center"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="@dimen/_13sdp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/buttonBack"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/_14ssp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        android:spacing="8dp">

        <!-- Title and EditText for Name -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nhập tên"
            android:inputType="textPersonName" />


        <!-- Title and EditText for Date -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium" />

        <EditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ngày sinh (dd/MM/yyyy)"
            android:inputType="text" />

        <!-- Title and EditText for Date -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ChucVu"
            android:layout_marginTop="@dimen/_6sdp"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium" />

        <EditText
            android:id="@+id/etChucVu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ke toan"
            android:inputType="text" />

        <!-- Title and EditText for Gender -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium" />

        <EditText
            android:id="@+id/etSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Giới tính"
            android:inputType="text" />

        <!-- Title and EditText for Gender -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hsl:"
            android:layout_marginTop="@dimen/_6sdp"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium" />

        <EditText
            android:id="@+id/etHsl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="1.5"
            android:inputType="text" />

        <!-- Title and EditText for Gender -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lcb:"
            android:layout_marginTop="@dimen/_6sdp"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium" />

        <EditText
            android:id="@+id/etLcb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="5000000đ"
            android:inputType="text" />
        <!-- Update Button -->
        <TextView
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_500"
            android:gravity="center"
            android:textSize="@dimen/_13ssp"
            android:paddingVertical="@dimen/_8sdp"
            android:background="@drawable/bg_item_setting"
            android:backgroundTint="@color/color_475CFF"
            android:layout_marginTop="@dimen/_13sdp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>